--- a/.github/workflows/Login.yml
+++ b/.github/workflows/Login.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   
   schedule:
-    - cron: '* * * * *'
+    - cron: '5 2 */7 * *'
 
 env:
   ACCOUNTS_JSON: ${{ secrets.ACCOUNTS_JSON }}
